--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,7 @@
     <!-- Development stage -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>Book Of Fortune</title>
+    <title>Oracle</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
