--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,10 +24,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Google Font -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Caveat&display=swap"
       rel="stylesheet" />
 
     <!-- Development stage -->
