Update shopping cart pop out

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,6 +34,11 @@
     <!-- Development stage -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/263fbc4d73.js"
+      crossorigin="anonymous"></script>
+
     <title>Oracle</title>
   </head>
   <body>
