add background colour to body

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,7 +41,7 @@
 
     <title>Oracle</title>
   </head>
-  <body>
+  <body class="bg-slate-950">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
