Remove tailwind cdn

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet" />
 
     <!-- Development stage -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
     <!-- font awesome -->
     <script
