--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app" />
+      content="Unveiling the future, one prophecy at a time." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -39,7 +39,7 @@
       src="https://kit.fontawesome.com/263fbc4d73.js"
       crossorigin="anonymous"></script>
 
-    <title>Oracle</title>
+    <title>Oracle - Unveiling the future, one prophecy at a time.</title>
   </head>
   <body class="bg-slate-950">
     <noscript>You need to enable JavaScript to run this app.</noscript>
